# For-Feature

./: Script.py  bot.py  info.py  pyproject.toml  requirements.txt  start.sh  utils.py
AI/: ai.py
database/: __init__.py  fsub_sql.py  ia_filterdb.py  join_reqs.py  users_chats_db.py  utils.py
plugins/: __init__.py  broadcast.py  commands.py  genlink.py  group_fsub.py  index.py  inline.py  join_req.py  log_cb.py  mediainfo.py  p_ttishow.py  pm_filter.py  route.py  verify.py
rename/: Renamer.py  __init__.py  captain.py  filedetect.py  renamer.py
stream/: route.py
stream/bot/: __init__.py  channel_stream.py  clients.py
stream/server/: __init__.py
stream/template/: dl.html  index.html  req.html
stream/utils/: channel_stream.py  custom_dl.py  file_properties.py  render_template.py
